--- a/TOPK Square.ipynb
+++ b/TOPK Square.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "63049be3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from AutoEncoders import TopKSAE, JumpReLuSAE\n",
+    "from AutoEncoders import TopKSAE, JumpReLuSAE, ReLuSAE\n",
+    "\n",
+    "\n",
+    "\n",
     "from Utils import createImageDataloader\n",
     "import clip\n",
     "import torch, torch.nn as nn\n",
@@ -24,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dd9b3081",
    "metadata": {},
    "outputs": [
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "96b85c6c",
    "metadata": {},
    "outputs": [],
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "f2760d0d",
    "metadata": {},
    "outputs": [
@@ -67,13 +70,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LOG] Initialized θ to Median\n"
+      "[LOG] Bias initialized to Geometric Median\n"
      ]
     }
    ],
    "source": [
-    "sae = JumpReLuSAE(d=512, n=128, lambda_=0.1, h=0.05)\n",
-    "sae.findTheta(vit, loader, 1)"
+    "sae = ReLuSAE(d=512, n=128, lam=0.1)\n",
+    "sae.findBias(vit, loader, 1)"
    ]
   },
   {
