--- a/TOPK Square.ipynb
+++ b/TOPK Square.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from AutoEncoders import TopKSAE, JumpReLuSAE, ReLuSAE\n",
+    "from AutoEncoders import TopKSAE, JumpReLUSAE, ReLUSAE, OrthogonalSAE\n",
     "\n",
     "\n",
     "\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f2760d0d",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "sae = ReLuSAE(d=512, n=128, lam=0.1)\n",
+    "sae = ReLUSAE(d=512, n=128, lam=0.1)\n",
     "sae.findBias(vit, loader, 1)"
    ]
   },
