--- a/TOPK Square.ipynb
+++ b/TOPK Square.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "63049be3",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dd9b3081",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "96b85c6c",
    "metadata": {},
    "outputs": [],
@@ -62,21 +62,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f2760d0d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LOG] Bias initialized to Geometric Median\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sae = ReLUSAE(d=512, n=128, lam=0.1)\n",
-    "sae.findBias(vit, loader, 1)"
+    "sae = OrthogonalSAE(d=512, n=128)\n",
+    "#sae.findBias(vit, loader, 1)"
    ]
   },
   {
