Add Bias to JumpReLUSAE

--- a/TOPK Square.ipynb
+++ b/TOPK Square.ipynb
@@ -27,31 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "dd9b3081",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([64, 3, 224, 224])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "DATA_DIR = '/Users/mawy/Desktop/Square Dataset/imgs'\n",
     "W, H = 224, 224\n",
     "BATCH = 64\n",
     "\n",
-    "loader = createImageDataloader(DATA_DIR, W, H, bsize=BATCH, shuffle=True)\n",
-    "xb, _ = next(iter(loader))\n",
-    "print(xb.shape)"
+    "loader = createImageDataloader(DATA_DIR, W, H, bsize=BATCH, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "96b85c6c",
    "metadata": {},
    "outputs": [],
