--- a/Train ReLUSAE on VIT-Activations.ipynb
+++ b/Train ReLUSAE on VIT-Activations.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e6e8de99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
     "from AutoEncoders import ReLUSAE\n",
     "from Utils import createImageDataloader\n",
-    "from transformers import CLIPVisionModel"
+    "from transformers import CLIPVisionModel\n",
+    "import torch\n",
+    "from torch.optim import Adam"
    ]
   },
   {
@@ -20,17 +21,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader = createImageDataloader(\n",
-    "    \"/Users/mawy/Desktop/Square 512\",\n",
-    "    model_name=\"openai/clip-vit-base-patch32\",\n",
-    "    batch_size=1,\n",
-    "    shuffle=False,\n",
-    ")\n",
+    "loader = createImageDataloader(\"/Users/mawy/Desktop/Square 512\", model_name=\"openai/clip-vit-base-patch32\", batch_size=1, shuffle=False)\n",
     "\n",
     "model = CLIPVisionModel.from_pretrained(\"openai/clip-vit-base-patch32\").eval()\n",
     "model.config.output_hidden_states = True\n",
     "\n",
-    "SAE = ReLUSAE(d=768, n=512, lam=1)"
+    "SAE = ReLUSAE(d=768, n=512, lam=1)\n",
+    "# FIX FINDBIAS FUNCTION - THIS IS COMPLETELY BROKEN"
    ]
   },
   {
@@ -39,7 +36,25 @@
    "id": "379461a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "epochs = 1 # TEST RUN\n",
+    "optimizer = Adam(SAE.parameters(), lr=1e-3)\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    for images in loader:\n",
+    "        with torch.no_grad():\n",
+    "            \n",
+    "            outputs = model(pixel_values = images).hidden_states[-1][:,0]\n",
+    "\n",
+    "        loss = SAE.loss(outputs)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        SAE.renorm()\n",
+    "\n",
+    "    print(f\"Epoch [{epoch+1}/{epochs}], Loss: {loss.item():.4f}\")"
+   ]
   },
   {
    "cell_type": "code",
