--- a/Hooking Transformers.ipynb
+++ b/Hooking Transformers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "588cc348",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "from transformers import CLIPVisionModel, CLIPProcessor\n",
     "from PIL import Image\n",
     "import torch\n",
-    "from Utils import createImageDataloader"
+    "from Utilities import createImageDataloader"
    ]
   },
   {
