--- a/ReLU SAE.ipynb
+++ b/ReLU SAE.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e6e8de99",
    "metadata": {},
    "outputs": [],
    "source": [
     "from AutoEncoders import ReLUSAE\n",
-    "from Utils import createImageDataloader\n",
-    "from Utils import countDeadNeurons\n",
+    "from Utilities import createImageDataloader\n",
+    "from Utilities import countDeadNeurons\n",
     "from transformers import CLIPVisionModel\n",
     "import torch\n",
     "from torch.optim import Adam\n",
