Adjust Training Loop, move to Colab

--- a/Training/Orthogonal SAE.ipynb
+++ b/Training/Orthogonal SAE.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "e6e8de99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using CPU.\n"
+     ]
+    }
+   ],
    "source": [
     "import AutoEncoders\n",
     "import Utilities\n",
@@ -13,48 +21,48 @@
     "from transformers import CLIPVisionModel\n",
     "import torch\n",
     "from torch.optim import Adam\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "\n",
+    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"Using\", str(DEVICE).upper() + \".\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "ec4bbcbe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader = Utilities.createImageDataloader(\"Images/Square 512\", model_name=\"openai/clip-vit-base-patch32\", batch_size=64, shuffle=True)\n",
+    "loader = Utilities.createImageDataloader(\n",
+    "    \"Images/Square 512\",\n",
+    "    model_name=\"openai/clip-vit-base-patch32\",\n",
+    "    batch_size=64,\n",
+    "    shuffle=True,\n",
+    ")\n",
     "\n",
     "model = CLIPVisionModel.from_pretrained(\"openai/clip-vit-base-patch32\").eval()\n",
     "model.config.output_hidden_states = True\n",
-    "CLS_LAYER = 6     \n",
-    "    \n",
+    "model.to(DEVICE)\n",
+    "CLS_LAYER = 6\n",
+    "\n",
     "SAE = AutoEncoders.OrthogonalSAE(\n",
     "    input_dim     = 768,\n",
     "    num_features  = 2048,\n",
     "    sparsity      = 0.50,\n",
     "    orthogonality = 0.10,\n",
-    ").to(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+    ").to(DEVICE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "daee6285",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 01/1 | Rec=123.0489 | L1=4473.0 | Ortho=16.7948 | Act=368.6 | LastLoss=205.8072\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "epochs     = 1\n",
     "optimizer  = Adam(SAE.parameters(), lr=1e-3)\n",
-    "DEVICE     = next(SAE.parameters()).device\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    SAE.train()\n",
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3780609f",
    "metadata": {},
    "outputs": [],
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ada08ec4",
    "metadata": {},
    "outputs": [
