--- a/Notebooks/Hooking Transformers.ipynb
+++ b/Notebooks/Hooking Transformers.ipynb
@@ -148,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "thesis",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
